[add] update user email with image url from aws s3 bucket method created

--- a/api_jwt_v3/app/views/uploads/new.html.erb
+++ b/api_jwt_v3/app/views/uploads/new.html.erb
@@ -2,5 +2,9 @@
 
 <%= form_tag uploads_path, enctype: 'multipart/form-data' do %>
 	<%= file_field_tag :file  %>
+    <div>
+        <%= label_tag "Email"%>
+        <%= email_field_tag :email %>
+    </div>
 	<%= submit_tag 'Upload file' %>
 <% end %>
