--- a/api_jwt_v3/app/views/uploads/new.html.erb
+++ b/api_jwt_v3/app/views/uploads/new.html.erb
@@ -9,8 +9,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
 <body>
- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <%= link_to "Image Upload", root_path, class: "navbar-brand" %>
+ <nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
+    <div class="container" >
+        <div class="row">
+            <div class="col-md-10 offset-md-11">
+            <%= link_to "Image Upload", root_path, class: "navbar-brand" %>
+            </div>
+        </div>
+    </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -22,16 +28,27 @@
       
     </div>
   </nav>
-<h1>Upload a file</h1>
-
-<%= form_tag uploads_path, enctype: 'multipart/form-data' do %>
-	<%= file_field_tag :file  %>
-    <div>
-        <%= label_tag "Email"%>
-        <%= email_field_tag :email %>
+  <div class="container">
+    <div class="row">
+        <div class="col-sm-12  offset-sm-3">
+                <h1 class="mt-5">Upload your picture</h1>
+                <form class="mt-5">
+                    
+                    <%= form_tag uploads_path, enctype: 'multipart/form-data' do %>
+                        <div class="form-group">
+                        <%= file_field_tag :file %>
+                        
+                            <%= label_tag "Email"%>
+                            <%= email_field_tag :email %>
+                        
+                        <%= submit_tag 'Upload file', class: 'btn btn-info' %>
+                        </div>
+                    <% end %>
+                    </div>
+                </form>
+             </div>
+        </div>
     </div>
-	<%= submit_tag 'Upload file' %>
-<% end %>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
