--- a/python-vid-recognition/web/templates/index.html
+++ b/python-vid-recognition/web/templates/index.html
@@ -1,9 +1,21 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>CheckingFace</title>
+    <link rel = "stylesheet" href = "styles/style.css">
   </head>
   <body>
-    <h1>Checking Face</h1>
-    <img src="{{ url_for('video_feed') }}">
+    <header>
+      <h1>Checking Face</h1>
+    </header>
+    <div class="container">
+      <img src="{{ url_for('video_feed') }}">
+    </div>
+    <footer>
+      AUTHORS
+      Andres Martin Peña
+      Andres Lopez
+      Maria Alejandra Coy
+    </footer>
   </body>
 </html>
