--- a/python-vid-recognition/web/templates/index.html
+++ b/python-vid-recognition/web/templates/index.html
@@ -1,30 +1,24 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>CheckingFace</title>
-    <style>
-      header {
-    color: white;
-    letter-spacing: 3px;
-    background-color: rgba(47, 60, 75, 0.925);
-    height: 60px;
-    width:100%;
-    text-align: center;
-    top: 0;}
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>CheckingFace</title>
+  <link href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap" rel="stylesheet"> 
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="left-container">
+    <h1>Checking <br> Face</h1>
 
-      .container {
-    max-width: 600px;
-    margin: 30px auto;
-    align-items: center;
-}
-    </style>
-  </head>
-  <body>
-    <header>
-      <h1>Checking Face</h1>
-    </header>
-    <div class="container">
-      <img src="{{ url_for('video_feed') }}">
-    </div>
-  </body>
+  </div>
+  <div class="rigth-container">
+    <div class="font-names"> <p> MARTIN <br> MALE <br> ANDRES </p></div>
+
+  </div>
+  <div class="video-container">
+    <!-- <img src="{{ url_for('video_feed') }}"> -->
+  </div>
+</body>
 </html>
