--- a/python-vid-recognition/web/static/css/style.css
+++ b/python-vid-recognition/web/static/css/style.css
@@ -2,7 +2,7 @@ body {
     color: #F5E2C6;
     font-family: 'Fredoka One', cursive;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 50% 50%;
     grid-template-rows: 100%;
     margin: 0;
     height: 100vh;
@@ -19,7 +19,7 @@ body {
 
 h1 {
     margin: 0;
-    padding-top: 15vh;
+    padding-top: 12vh;
     font-size: 70px;
     padding-left: 10%;
 }
@@ -32,8 +32,35 @@ h1 {
 
 .font-names {
     color: rgba(32, 36, 42, 0.8);
-    font-size: 120px;
+    display: flex;
+    flex-direction: column;
+    font-size: 15rem;
     opacity: 0.9;
-    padding-left: 45%;
-    padding-top: 20%;
+    padding-left: 5%;
+    padding-top: 5%;
+    align-items: end;
+}
+
+.font-names p {
+    margin: 0;
+    text-align: end;
+}
+.video-container {
+    position: absolute;
+    top: calc((100% - 480px)/2);
+    left: calc((100% - 640px)/2);
+    z-index: 2;
+    width: 640px;
+    height: 480px;
+    background: #7f8388;
+}
+
+.circle {
+    position: absolute;
+    border-radius: 50%;
+    border: 17px solid #FF662B;
+    height: 200px;
+    width: 200px;
+    top: calc(((100% - 480px)/2) + 350px);
+    left: calc(((100% - 640px)/2) - 110px);
 }
