--- a/python-vid-recognition/web/templates/index.html
+++ b/python-vid-recognition/web/templates/index.html
@@ -6,11 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>CheckingFace</title>
   <link href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap" rel="stylesheet"> 
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+  <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"> -->
+  <link rel="stylesheet" href="../static/css/style.css">
 </head>
 <body>
   <div class="left-container">
     <h1>Checking <br> Face</h1>
+    <div class="circle"></div>
 
   </div>
   <div class="rigth-container">
@@ -18,7 +20,8 @@
 
   </div>
   <div class="video-container">
-    <img src="{{ url_for('video_feed') }}"/>
+    <!-- <img src="{{ url_for('video_feed') }}"/> -->
+    <img src="" alt="video"/>
   </div>
 </body>
 </html>
