--- a/python-vid-recognition/web/templates/index.html
+++ b/python-vid-recognition/web/templates/index.html
@@ -20,8 +20,8 @@
 
   </div>
   <div class="video-container">
-    <!-- <img src="{{ url_for('video_feed') }}"/> -->
-    <img src="" alt="video"/>
+    <img src="{{ url_for('video_feed') }}"/>
+    <!-- <img src="" alt="video"/> -->
   </div>
 </body>
 </html>
